--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-/.github @GroundDev @moonjs0113 @seuljiku @sunchoi22 @sustainable-git @wonny1012
+* @GroundDev @moonjs0113 @seuljiku @sunchoi22 @sustainable-git @wonny1012
